# model-CubeSatOBC

./: .gitignore  README.md  designPln
groundStation/: readSerial.py
obcFirmware/: CMakeLists.txt
obcFirmware/main/: CMakeLists.txt  obcFirmware.c
obcFirmware/main/drivers/: uart_gs.c  uart_gs.h
obcFirmware/main/middleware/: bus.c  bus.h  cobs.c  cobs.h
obcFirmware/main/packet/: packet.h
obcFirmware/main/sys/: state_machine.c  state_machine.h
obcFirmware/main/tasks/: cdh_task.c  eps_task.c  ttc_task.c
