idf_component_register(
    SRCS 
        "obcFirmware.c"
        "middleware/bus.c"
        "tasks/eps_task.c"
        "tasks/cdh_task.c"
        "tasks/ttc_task.c"
        "drivers/uart_gs.c"
        "sys/state_machine.c"
    INCLUDE_DIRS 
        "."
        "middleware"
        "packet"
        "tasks"
        "drivers"
        "sys"
)